Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch eSportXpertise
Your branch is up to date with 'origin/eSportXpertise'.

Changes to be committed:
	modified:   config/packages/security.yaml
	new file:   migrations/Version20231116132442.php
	new file:   migrations/Version20231116151209.php
	new file:   migrations/Version20231120130514.php
	new file:   migrations/Version20231120134504.php
	modified:   public/css/country.css
	modified:   public/css/player.css
	modified:   public/css/style.css
	modified:   public/js/collectionTypeSocialMedia.js
	new file:   public/js/nationalitySearchBar.js
	modified:   public/js/searchBars.js
	modified:   src/Controller/CountryController.php
	modified:   src/Controller/EditorController.php
	modified:   src/Controller/PlayerController.php
	modified:   src/Controller/RegistrationController.php
	modified:   src/Controller/TeamController.php
	modified:   src/Entity/Editor.php
	modified:   src/Entity/Player.php
	modified:   src/Entity/Team.php
	modified:   src/Entity/User.php
	modified:   src/Form/PlayerType.php
	modified:   src/Form/RegistrationFormType.php
	modified:   src/Form/TeamType.php
	modified:   templates/base.html.twig
	modified:   templates/country/countryDetails.html.twig
	modified:   templates/country/index.html.twig
	modified:   templates/editor/editorDetails.html.twig
	modified:   templates/editor/editorForm.html.twig
	modified:   templates/player/playerDetails.html.twig
	modified:   templates/player/playerForm.html.twig
	modified:   templates/registration/register.html.twig
	new file:   templates/searchbar.html.twig
	modified:   templates/team/teamDetails.html.twig
	modified:   templates/team/teamForm.html.twig

--- a/public/css/player.css
+++ b/public/css/player.css
@@ -21,3 +21,21 @@
 .playerNationality img{
     width: 20px;
 }
+
+/********************************************* FORM ****************************************************/
+.selected{
+    display: flex;
+}
+
+#countryBoxes{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+#countryBoxes input{
+    margin-right: 5px;
+}
+
+#countryBoxes label{
+    margin-right: 20px;
+}
