--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,8 +7,13 @@
         <script src="https://kit.fontawesome.com/d08e193109.js" crossorigin="anonymous"></script>
 
         <title>{% block title %}Welcome!{% endblock %}</title>
+        
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
+        <link href="https://fonts.googleapis.com/css2?family=Exo:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        
         {% block stylesheets %}
 
             {# Link for Swiper's CSS #}
@@ -176,24 +181,26 @@
             {# Link to bootstrap's js #}
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
+            {# links to my js files #}
+            
+            {# link to nationalitySearchBar js #}
+            <script src="{{ asset('js/nationalitySearchBar.js') }}"></script>
+
+            {# link to searchBars js #}
+            <script src="{{ asset('js/searchBars.js') }}"></script>
+
+            {# link to favorite js #}
+            <script src="{{ asset('js/favorite.js') }}"></script>
+            
+            {# link to gameDetails js #}
+            <script src="{{ asset('js/gameDetails.js') }}"></script>
+            
             {# Script for jquery #}
             <script
                 src="https://code.jquery.com/jquery-3.4.1.min.js"
                 integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
                 crossorigin="anonymous">
             </script>
-
-            
-            {# links to my js files #}
-            
-            {# link to searchBars js #}
-            <script src="{{ asset('js/searchBars.js') }}"></script>
-
-            {# link to favorite js #}
-            <script src="{{ asset('js/favorite.js') }}"></script>
-
-            {# link to gameDetails js #}
-            <script src="{{ asset('js/gameDetails.js') }}"></script>
 
             {# link to collectionType for social medias js #}
             <script src="{{ asset('js/collectionTypeSocialMedia.js') }}"></script>
