--- a/templates/country/countryDetails.html.twig
+++ b/templates/country/countryDetails.html.twig
@@ -1,29 +1,31 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}{{country}}{% endblock %}
+{% block title %}{{ country.translations.fra.common }}{% endblock %}
 
 {% block body %}
 
     {# This figure contains the flag of the country and the title of the page which is the country's name #}
-    <figure class="countryFlag">
+    {# <figure class="countryFlag">
         <img src="{{country.flag}}" alt="Drapeau {{ country }}">
         <figcaption>
             <h1>{{country}}</h1>
         </figcaption>
-    </figure>
+    </figure> #}
 
     <article class="countryEditors">
+          
         <h2>Liste des éditeurs de jeux</h2>
         <ul>
-            {% if country.editors %}
-                {% for editor in country.editors %}
+            {% for editor in editors %}
+                {% if editor.country == country.cca2 %} 
                     <li><a href="{{ path('details_editor', {'id': editor.id}) }}">{{ editor }}</a></li>
-                {% endfor %}
-            {% endif %}
+                {% endif %}
+            {% endfor %}
         </ul>
+
     </article>
 
-    <article class="countryTeams">
+    {# <article class="countryTeams">
         <h2>Liste des équipes</h2>
         <ul>
             {% if country.teams %}
@@ -43,13 +45,13 @@
                 {% endfor %}
             {% endif %}
         </ul>
-    </article>
+    </article> #}
 
     {# Delete and modify the database is only allowed to moderators or admin #}
-    {% if is_granted('ROLE_MODERATOR') %}
+    {# {% if is_granted('ROLE_MODERATOR') %}
         <a href="{{ path('edit_country', {'id': country.id}) }}" class="btn btn-warning">Modifier {{ country }}</a>
         <a href="{{ path('delete_country', {'id': country.id}) }}" class="btn btn-danger">Supprimer {{ country }}</a>
-    {% endif %}
+    {% endif %} #}
 
 
 {% endblock %}
