--- a/templates/editor/editorForm.html.twig
+++ b/templates/editor/editorForm.html.twig
@@ -19,12 +19,7 @@
         {{ form_row(form.city) }}
 
         <label for="searchInput">Dans quel pays est situé le siège social de l'éditeur ?</label>
-        <input id="searchInput" class="form-control" type="search" placeholder="Rechercher un pays">
-
-        <label for="textHint">Selectionner le pays</label>
-        <select id="textHint" name="country" class="hide form-control">
-
-        </select>
+        {% include "searchBar.html.twig" %}
 
 
         {{ form_row(form.linkToOfficialPage) }}
