--- a/templates/player/playerDetails.html.twig
+++ b/templates/player/playerDetails.html.twig
@@ -12,36 +12,22 @@
         {# Begining of the sentence where we use the player nickname firstname and lastname #} 
         {{ player }} (de son vrai nom {{ player.firstname }} {{ player.lastname }}, {{ player.gender == 'Homme' ? ' né ' : ' née' }}  le {{ player.birthDate|date_fr('d F Y') }}) est 
 
-            {# Ternary operator : inline if that allows me to ask if the player is male or female to modify the sentence in consequence #}
-            {{ player.gender == 'Homme' ? ' un joueur ' : ' une joueuse ' }} 
+        {# Ternary operator : inline if that allows me to ask if the player is male or female to modify the sentence in consequence #}
+        {{ player.gender == 'Homme' ? ' un joueur ' : ' une joueuse ' }} 
 
-            {# loop to get the player countries #}
-            {% for country in player.countries %}
-                
-                {# link to the country's details #}
-                <a href="{{ path('details_country', {'id': country.id}) }}">
+        {# link to the country's details #}
+        {# figure that will allow me to add the country's flag #}
+        {# link to the country flag #}
+        {# <a href="{{ path('details_country', {'id': country.id}) }}">
 
-                    {# figure that will allow me to add the country's flag #}
-                    <figure class="playerNationality">
+            <figure class="playerNationality">
 
-                        {# link to the country flag #}
-                        <img src="{{ country.flag }}" alt="Drapeau {{ country.nationalityNameMale }}">
+                <img src="{{ country.flag }}" alt="Drapeau {{ country.nationalityNameMale }}">
 
-                        {# in the figcaption I will put the nationality's adjective to continue the sentence #}
-                        <figcaption>
 
-                            {# another ternary operator here it's again to modify the sentence if the player is male or female #}
-                            {{ player.gender == 'Homme' ? country.nationalityNameMale|lower : country.nationalityNameFemale|lower }}
+            </figure>
 
-                        </figcaption>
-
-                    </figure>
-
-                </a>
-                {#  #}
-                {{ not loop.last ? ' et ' : '.' }}
-
-            {% endfor %}
+        </a> #}
     </article>
 
     <article>
