--- a/templates/team/teamForm.html.twig
+++ b/templates/team/teamForm.html.twig
@@ -12,6 +12,19 @@
     {% endif %}
         
     {# First form is the FUNCTION the second one is the var creates in the controller #}
-    {{ form(form) }}
+    {{ form_start(form) }} 
+
+        {{ form_row(form.name) }}
+        {{ form_row(form.address) }}
+        {{ form_row(form.zipCode) }}
+        {{ form_row(form.city) }}
+
+        <label for="searchInput">Dans quel pays est situé le siège social de l'équipe ?</label>
+        {% include "searchBar.html.twig" %}
+
+
+        {{ form_row(form.linkToOfficialPage) }}
+
+    {{ form_end(form) }}
    
 {% endblock %}
