--- a/templates/team/teamDetails.html.twig
+++ b/templates/team/teamDetails.html.twig
@@ -7,7 +7,7 @@
     <div class="title">
 
         <h1>{{team}}</h1>
-        {% if is_granted('ROLE_USER') %}
+        {% if is_granted('ROLE_USER')  and not is_granted('ROLE_TEAM') or is_granted('ROLE_MODERATOR')%}
             {% if app.user.team and app.user.team.id == team.id %}
                 <a href= "{{ path('add_team', {'id': team.id}) }}" class="starContainer">
                     <i class='fa-solid fa-star favTeam'></i>
@@ -26,7 +26,7 @@
         <div class="alert alert-danger" role="alert">{{ flash_error }}</div>
     {% endfor %}
     {% for flash_success in app.flashes('success') %}
-        <div class="alert alert-danger" role="alert">{{ flash_success }}</div>
+        <div class="alert alert-success" role="alert">{{ flash_success }}</div>
     {% endfor %}
             
     {# <p>Son siège sociale : <a href="{{ path('details_country', {'id': team.country.id}) }}">{{ team.country }}</a></p> #}
@@ -49,11 +49,14 @@
     {% endfor %}
 
 
-    {# Allowing modifications only to moderators and admin #}
-    {% if is_granted("ROLE_MODERATOR") %}
+    {# Allowing modifications only to moderators, admin and the creatoe of the team #}
+    {% if is_granted("ROLE_MODERATOR") or is_granted("ROLE_TEAM") and app.user.team.id == team.id %}
 
         {# link to add a new roster #}
         <a href="{{ path('new_roster', {'id': team.id}) }}" class="btn btn-warning">Ajouter un roster</a>
+        
+        {# link to add a new player #}
+        <a href="{{ path('new_player') }}" class="btn btn-warning">Ajouter un joueur</a>
         
         {# link to modify a team #}
         <a href="{{ path('edit_team', {'id': team.id}) }}" class="btn btn-warning">Modifier {{ team }}</a>
