--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -19,10 +19,15 @@
     <input type="text" value="{{ last_username }}" name="username" id="inputUsername" class="form-control" autocomplete="username" required autofocus>
     <label for="inputPassword">Mot de Passe</label>
     <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
+    <label>
+        <input type="checkbox" name="_remember_me">
+        Se souvenir de moi
+    </label>
 
     <input type="hidden" name="_csrf_token"
            value="{{ csrf_token('authenticate') }}"
     >
+
     <p>Mot de passe oublié ? <a href="{{ path('app_forgot_password_request') }}">Modifier mon mot de passe.</a></p>
 
     <button class="btn btn-lg btn-primary" type="submit">
