--- a/templates/team/teamDetails.html.twig
+++ b/templates/team/teamDetails.html.twig
@@ -26,7 +26,7 @@
         <div class="alert alert-danger" role="alert">{{ flash_error }}</div>
     {% endfor %}
     {% for flash_success in app.flashes('success') %}
-        <div class="alert alert-danger" role="alert">{{ flash_success }}</div>
+        <div class="alert alert-success" role="alert">{{ flash_success }}</div>
     {% endfor %}
             
     {# <p>Son siège sociale : <a href="{{ path('details_country', {'id': team.country.id}) }}">{{ team.country }}</a></p> #}
