--- a/templates/country/countryDetails.html.twig
+++ b/templates/country/countryDetails.html.twig
@@ -1,51 +1,130 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}{{ country.translations.fra.common }}{% endblock %}
+{% block title %}{{ infos.translations.fra.common }}{% endblock %}
 
 {% block body %}
 
     {# This figure contains the flag of the country and the title of the page which is the country's name #}
-    {# <figure class="countryFlag">
-        <img src="{{country.flag}}" alt="Drapeau {{ country }}">
-        <figcaption>
-            <h1>{{country}}</h1>
-        </figcaption>
-    </figure> #}
+    {# {{ dump(infos) }}
+    {% for country in infos %}
+        {{ dump(country) }} #}
+        {# {{ dump(infos) }} #}
+        <figure class="countryFlag">
+            <img src="{{infos.flags.png}}" alt="Drapeau {{ infos.translations.fra.common }}">
+            <figcaption>
+                <h1>{{infos.translations.fra.common}}</h1>
+            </figcaption>
+        </figure>
+    {# {% endfor %} #}
 
-    <article class="countryEditors">
-          
-        <h2>Liste des éditeurs de jeux</h2>
-        <ul>
-            {% for editor in editors %}
-                {% if editor.country == country.cca2 %} 
-                    <li><a href="{{ path('details_editor', {'id': editor.id}) }}">{{ editor }}</a></li>
-                {% endif %}
-            {% endfor %}
-        </ul>
+    {# checking how many editors this country has #}
+    {% set editorsInCountry = 0 %}
 
-    </article>
-
-    {# <article class="countryTeams">
-        <h2>Liste des équipes</h2>
-        <ul>
-            {% if country.teams %}
-                {% for team in country.teams %}
-                    <li><a href="{{ path('details_team', {'id': team.id}) }}">{{ team }}</a></li>
-                {% endfor %}
-            {% endif %}
-        </ul>
-    </article>
     
-    <article class="countryPlayers">
-        <h2>Liste des joueurs</h2>
-        <ul>
-            {% if country.players %}
-                {% for player in country.players %}
-                    <li><a href="{{ path('details_player', {'id': player.id}) }}">{{ player }}</a></li>
-                {% endfor %}
+    {% for editor in editors %}
+        {% if editor.country == infos.cca2 %} 
+            {% set editorsInCountry = editorsInCountry + 1 %}
+        {% endif %}
+    {% endfor %}
+
+    {% if editorsInCountry > 0 %}
+
+        <article class="countryEditors">
+
+            {% if editorsInCountry > 1 %}
+
+                <h2>Liste des éditeurs de jeux</h2>
+            
+            {% else %}
+
+                <h2>Ce pays ne dispose que d'un éditeur de jeux vidéo. Il s'agit de :</h2>
+                
             {% endif %}
-        </ul>
-    </article> #}
+
+            <ul>
+                {% for editor in editors %}
+                    {% if editor.country == infos.cca2 %} 
+                        <li><a href="{{ path('details_editor', {'id': editor.id}) }}">{{ editor }}</a></li>
+                    {% endif %}
+                {% endfor %}
+            </ul>
+
+        </article>
+        
+    {% endif %}
+
+    {# checking how many teams this country has #}
+    {% set teamsInCountry = 0 %}
+
+    
+    {% for team in teams %}
+        {% if team.country == infos.cca2 %} 
+            {% set teamsInCountry = teamsInCountry + 1 %}
+        {% endif %}
+    {% endfor %}
+
+    {% if teamsInCountry > 0 %}
+
+        <article class="countryTeams">
+
+            {% if teamsInCountry > 1 %}
+
+                <h2>Liste des équipes</h2>
+            
+            {% else %}
+
+                <h2>Ce pays ne dispose que d'une équipe. Il s'agit de :</h2>
+                
+            {% endif %}
+
+            <ul>
+                {% for team in teams %}
+                    {% if team.country == infos.cca2 %} 
+                        <li><a href="{{ path('details_team', {'id': team.id}) }}">{{ team }}</a></li>
+                    {% endif %}
+                {% endfor %}
+            </ul>
+
+        </article>
+        
+    {% endif %}
+
+    {# checking how many players this country has #}
+    {% set playersInCountry = 0 %}
+
+    
+    {% for player in players %}
+        {% if player.country == infos.cca2 %} 
+            {% set playersInCountry = playersInCountry + 1 %}
+        {% endif %}
+    {% endfor %}
+
+    {% if playersInCountry > 0 %}
+
+        <article class="countryplayers">
+
+            {% if playersInCountry > 1 %}
+
+                <h2>Liste des joueurs</h2>
+            
+            {% else %}
+
+                <h2>Ce pays ne dispose que d'un seul joueur. Il s'agit de :</h2>
+                
+            {% endif %}
+
+            <ul>
+                {% for player in players %}
+                    {% if player.country == infos.cca2 %} 
+                        <li><a href="{{ path('details_player', {'id': player.id}) }}">{{ player }}</a></li>
+                    {% endif %}
+                {% endfor %}
+            </ul>
+
+        </article>
+        
+    {% endif %}
+
 
     {# Delete and modify the database is only allowed to moderators or admin #}
     {# {% if is_granted('ROLE_MODERATOR') %}
