--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,41 +1,46 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}HomeController!{% endblock %}
+{% block title %}Bienvenue sur Esport Xpertise - Le site d'information sur l'esport{% endblock %}
 
     
 {% block body %}
+
     {# this is the error message #}
     {% for message in app.flashes('warning') %}
-    <p>
-        {{message}}
-    </p>
+        <p>
+            {{message}}
+        </p>
     {% endfor %}
-    <aside>
-        <ol>
-            {% for user in users %}
-                <li>
-                    {{ user }} ||
-                    {{ user.siteCoins }} <i class="fa-solid fa-coins" style="color: #f2d40d;"></i>
-                </li>
-            {% endfor %}
 
-        </ol>
-    </aside>
+    <h1>Bienvenue sur Esport Xpertise {{ app.user == '' ? '' : app.user }} </h1>
 
-    <aside>
-        <ol>
-            {# loop to take the teams in the data base limited at 10 needed and the sort allows me to sort the teams by  #}
-            {% for team in teams|sort((a, b) => b.users|length <=> a.users|length)|slice(0, 10) %}
-                <li>
-                    <a href="{{ path('details_team', {'id': team.id}) }}">{{ team }}</a> ||
-                    {{ team.users|length }} <i class="fa-solid fa-users"></i>
-                </li>
-            {% endfor %}
+    <p>
+        Bienvenue sur Esport Xpertise, un site pour les amateurs d’esport et pour ceux qui en font la découverte. Ici vous pourrez trouver des renseignements sur ce qu’est l’eSport mais aussi sur chaque équipe, chaque jeu ou encore chaque tournoi existant.
+        {% if app.user %}
 
-        </ol>
-    </aside>
-    {# {% if is_granted('ROLE_MODERATOR') %}
-        <h1>tu es l'admin</h1>
-        
-    {% endif %} #}
+        {% else %}
+            <a href="{{ path('app_register') }}">Inscrivez vous</a> pour faire des prédictions sur des matchs et inscrire votre nom parmi les meilleurs et, si vous le souhaitez, suivre votre équipe favorite.
+        {% endif %} 
+    </p>
+
+    <div class="homeContent">
+
+        <aside class="topUsers">
+            {% include "topUsersList.html.twig" %}
+        </aside>
+    
+        <article>
+            <h2>Qu'est-ce que l'esport ?</h2>
+            <p>
+                L'esport désigne la compétiton entre des professionels du jeux vidéo.
+            </p>
+        </article>
+    
+        <aside class="topTeams">
+            {% include "topTeamsList.html.twig" %}
+        </aside>
+
+    </div>
+    
+
 {% endblock %}
