Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch WithoutTournament
Changes to be committed:
	new file:   migrations/Version20231128083330.php
	new file:   public/js/GameSearchBar.js
	deleted:    public/js/nationalitySearchBar.js
	modified:   src/Controller/ApiController.php
	modified:   src/Controller/RosterController.php
	deleted:    src/Controller/TournamentController.php
	modified:   src/Entity/Encounter.php
	modified:   src/Entity/Game.php
	modified:   src/Entity/Roster.php
	deleted:    src/Entity/Tournament.php
	deleted:    src/Entity/TournamentResult.php
	modified:   src/Form/EditorType.php
	modified:   src/Form/RosterType.php
	deleted:    src/Form/TournamentType.php
	modified:   src/Repository/GameRepository.php
	deleted:    src/Repository/TournamentRepository.php
	deleted:    src/Repository/TournamentResultRepository.php
	modified:   templates/base.html.twig
	modified:   templates/editor/editorForm.html.twig
	modified:   templates/player/playerForm.html.twig
	modified:   templates/roster/rosterForm.html.twig
	renamed:    templates/searchbar.html.twig -> templates/searchbarCountry.html.twig
	new file:   templates/searchbarGame.html.twig
	modified:   templates/team/teamDetails.html.twig
	modified:   templates/team/teamForm.html.twig
	deleted:    templates/tournament/index.html.twig
	deleted:    templates/tournament/tournamentDetails.html.twig
	deleted:    templates/tournament/tournamentForm.html.twig

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -68,9 +68,6 @@
                     {# link to list of countries #}
                     <li><a href="{{ path('app_country') }}">Pays</a></li>
 
-                    {# link to list of tournaments #}
-                    <li><a href="{{ path('app_tournament') }}">Tournois</a></li>
-
                     {% if app.user %}
 
                         {# logOut #}
@@ -128,9 +125,6 @@
                                 {# Link to create a new editor #}
                                 <li><a href="{{ path('new_editor') }}" class="dropdown-item">Editeur</a></li>
 
-                                {# Link to create a new tournament #}
-                                <li><a href="{{ path('new_tournament') }}" class="dropdown-item">Tournoi</a></li>
-
                                 {# Link to create a new social media #}
                                 <li><a href="{{ path('app_home') }}" class="dropdown-item">Réseau Social</a></li>
                             </ul>
@@ -184,7 +178,7 @@
             {# links to my js files #}
             
             {# link to nationalitySearchBar js #}
-            <script src="{{ asset('js/nationalitySearchBar.js') }}"></script>
+            <script src="{{ asset('js/gameSearchBar.js') }}"></script>
 
             {# link to searchBars js #}
             <script src="{{ asset('js/searchBars.js') }}"></script>
