--- a/templates/editor/editorForm.html.twig
+++ b/templates/editor/editorForm.html.twig
@@ -19,7 +19,7 @@
         {{ form_row(form.city) }}
 
         <label for="searchInput">Dans quel pays est situé le siège social de l'éditeur ?</label>
-        {% include "searchBar.html.twig" %}
+        {% include "searchBarCountry.html.twig" %}
 
 
         {{ form_row(form.linkToOfficialPage) }}
