--- a/templates/player/playerForm.html.twig
+++ b/templates/player/playerForm.html.twig
@@ -38,7 +38,7 @@
             
             {# add player's nationality #}
             <label for="searchInput">Quelle est la nationalité sportive du joueur ?</label>
-            {% include "searchBar.html.twig" %}
+            {% include "searchBarCountry.html.twig" %}
 
 
         </article>
