--- a/templates/roster/rosterForm.html.twig
+++ b/templates/roster/rosterForm.html.twig
@@ -17,6 +17,8 @@
         <article>
             {{ form_row(form.startDate) }}
             {{ form_row(form.endDate) }}
+
+            {% include "searchbarGame.html.twig" %}
         </article>
 
         <div class="form-group row ">
