--- a/templates/team/teamForm.html.twig
+++ b/templates/team/teamForm.html.twig
@@ -20,7 +20,7 @@
         {{ form_row(form.city) }}
 
         <label for="searchInput">Dans quel pays est situé le siège social de l'équipe ?</label>
-        {% include "searchBar.html.twig" %}
+        {% include "searchBarCountry.html.twig" %}
 
 
         {{ form_row(form.linkToOfficialPage) }}
